# LinuxApplicationDevelopment2022

./: CMakeLists.txt  README.md
01_GitBuildReq/: main.c
02_TerminalProject/: Makefile  Show.c
03_Multifile/: Makefile
04_Text/: randomize.sh
05_Debugging/: .gdbinit  Makefile  first.gdb  first_correct  range.c  second.gdb  second_correct
06_Regexps/: Makefile  esub.c
07_TracingFencing/: Makefile  move.c  remove.c
08_Environmental/: Makefile  Makefile.am  config.h  configure.ac  rhasher.c
09_I18n/: CMakeLists.txt  main.c
09_I18n/po/ru/: ru.po
09_I18n/po/ru/LC_MESSAGES/: ru.po
12_Documenting/: CMakeLists.txt  Doxyfile.in  main.c
12_Documenting/po/ru/: ru.po
